--- a/our_land/templates/homepage.html
+++ b/our_land/templates/homepage.html
@@ -18,7 +18,7 @@ data about land ownership in South Africa. Compare places using tables and maps,
 {% block header_content %}
 <div class="content-container clearfix bg-color-secondary text-center">
     <div class="wrapper">
-        <h1>Discover the Stories Behind the Data</h1>
+        <h1>Discover the Data behind our Land</h1>
         <h4>{{ HURUMAP.name }} provides useful facts and data about land ownership in South Africa.</h4>
     </div>
 </div>
