--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -16,21 +16,23 @@
       <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
         <div class="wrapper clearfix">
           <div class="geography-ico">
-                    <span><img
-                        src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
-                    </span>
+              <span><img
+                  src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
+              </span>
           </div>
           <ul>
-            <!-- <li><a href="#farm-land"><i class="fa fa-check"></i>
-              <span>Farms & Agricultural Land</span></a></li>
-            <li><a href="#erven-land"><i class="fa fa-home"></i>
-              <span>Erven & Urban Land</span></a></li>
-            <li><a href="#sectional-title-land"><i class="fa fa-user"></i>
-              <span>Sectional Title Land</span></a></li> -->
               <li><a href="#agricultural-land-sales"><i class="fa fa-money"></i>
-                <span>Sales of Agricultural Land</span></a></li>
+                <span>Agricultural Land Sales</span></a></li>
+              <li><a href="#agricultural-land-sales-colour"><i class="fa fa-user"></i>
+                <span>Land Traded for Transactions of Colour</span></a></li>
               <li><a href="#redistribution-restitution"><i class="fa fa-check"></i>
-                <span>Land Redistribution and Restitution</span></a></li>
+                <span> Land Redistribution and Restitution</span></a></li>
+              <li><a href="#farm-land"><i class="fa fa-leaf"></i>
+                  <span>Farm Land</span></a></li>
+              <li><a href="#erven-land"><i class="fa fa-building"></i>
+                  <span>Erven & Urban Land</span></a></li>
+              <li><a href="#sectional-title-land"><i class="fa fa-bolt"></i>
+                  <span>Sectional Title Land</span></a></li>
           </ul>
         </div>
       </nav>
@@ -39,29 +41,11 @@
 {% block profile_header_population %}
 {% endblock %}
 
-
-
 {% block profile_header_tail %}
-<!-- <div class="column-full">
-    <strong> Year {{ primary_releases.active.year }}</strong>
-    {% if primary_releases.other %}
-    <div class="tool-group toggle-sub-group release-list">
-        <a>Change release<i class="fa fa-chevron-circle-down"></i></a>
-        <ul class="sub-group" style="display: none;">
-        {% for release in primary_releases.other %}
-            <li><a href="{{ request.path }}?release={{release.year}}"> Other year {{ release.year }}</a></li>
-        {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
-</div> -->
 {% endblock %}
 
-
-
-
 {% block profile_detail %}
-{% if not districtdistribution.towndistrictdistributiontransactionsdata.is_missing %}
+{% if not districtdistribution.is_missing %}
 <article>
   <header class="section-contents">
       <h1>Agricultural Land Sales Statistic for District Towns</h1>
@@ -87,10 +71,10 @@
               data-source-link="http://land.agrids.co.za/"></div>
           </div>
         </section>
-        <section class="clearfix stat-row">
+        <!-- <section class="clearfix stat-row">
           <div class="column-full">
-            <div id="chart-histogram-districtdistribution-towndistrictdistributionavgpricedata-{{key}}"
-              data-stat-type="number"
+            <div id="chart-bar-districtdistribution-towndistrictdistributionavgpricedata-{{key}}"
+              data-initial-sort="-value"
               data-chart-title="Average price sold per land class"
               data-source-title="AGRIDS, 2018"
               data-source-link="http://land.agrids.co.za/"></div>
@@ -98,19 +82,19 @@
         </section>
         <section class="clearfix stat-row">
           <div class="column-full">
-            <div id="chart-histogram-districtdistribution-towndistrictdistributionpricetrendsdata-{{key}}"
-              data-stat-type="number"
+            <div id="chart-bar-districtdistribution-towndistrictdistributionpricetrendsdata-{{key}}"
+              data-initial-sort="-value"
               data-chart-title="Price trends per land class"
               data-source-title="AGRIDS, 2018"
               data-source-link="http://land.agrids.co.za/"></div>
           </div>
-      </section>
+      </section> -->
       {% endfor %}
   </div>
 </article>
 {% endif %}
 
-{% if not landsales.landsalestransaction.is_missing or not landsales.landsaleshectares.is_missing %}
+{% if not landsales.is_missing %}
 <article id="agricultural-land-sales" class="clearfix">
   <header class="section-contents">
       <h1>Agricultural Land Sales</h1>
@@ -164,8 +148,8 @@
   </div>
 </article>
 {% endif %}
-{% if not landsalescolour.landsalescolourhectares.is_missing %}
-<article id="agricultural-land-sales" class="clearfix">
+{% if not landsalescolour.is_missing %}
+<article id="agricultural-land-sales-colour" class="clearfix">
   <header class="section-contents">
       <h1>Land traded statistic for transactions of colour</h1>
   </header>
@@ -281,7 +265,7 @@
   </div>
 </article>
 {% endif %}
-{% if not farmland.private_land_ownership_in_hectares_per_category.is_missing or not farmland.number_of_private_land_owners_by_category.is_missing %}
+{% if not farmland.is_missing %}
   <article id="farm-land" class="clearfix">
       <header class="section-contents">
           <h1>Individual Land</h1>
@@ -367,7 +351,7 @@
       </div>
   </article>
 {% endif %}
-{% if not ervenland.erven_land_ownership_in_hectares_by_race.is_missing %}
+{% if not ervenland.is_missing %}
   <article id="erven-land" class="clearfix">
       <header class="section-contents">
           <h1>Erven Land</h1>
@@ -438,7 +422,7 @@
       </div>
   </article>
 {% endif %}
-{% if not sectionaltitleland.sectional_title_ownership_in_hectares_per_race.is_missing %}
+{% if not sectionaltitleland.is_missing %}
   <article id="sectional-title-land" class="clearfix">
     <header class="section-contents">
         <h1>Sectional Title Land</h1>
@@ -523,7 +507,7 @@
     </div>
   </article>
 {% endif %}
-{% if not redistributionandrestitution.hectarestransferredperprovincebyyear.is_missing %}
+{% if not redistributionandrestitution.is_missing %}
   <article id="redistribution-restitution" class="clearfix">
     <header class="section-contents">
         <h1>Land Redistribution and Restitution</h1>
