--- a/our_land/templates/homepage.html
+++ b/our_land/templates/homepage.html
@@ -1,4 +1,4 @@
-{% extends 'homepage.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage.html' %}{% load humanize partition static %}
 
 {% block head_meta_description %}{{ HURUmap.name }} provides useful facts and
 data about land ownership in South Africa. Compare places using tables and maps,
