--- a/our_land/templates/_footer.html
+++ b/our_land/templates/_footer.html
@@ -13,13 +13,12 @@
 <div class="column-third text-center">
     <p>A project by:</p>
     {% block footer_branding %}
-    <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
+    <a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">
+        <img src="{% static 'img/logos/citypress-white.png' %}" alt="City Press" style="margin-top: 0;"></a>
+    <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
         <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
-    <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
-        <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
-
     {% endblock %}
     <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid rgba(255, 255, 255, 0.5);"/>
-    <p style="margin-bottom: 0;"><small>ANCIR is incubated by Code for Africa.</small></p>
-    <p><small>Code for Africa is an initiative of ICFJ.</small></p>
+    <p style="margin-bottom:0;"><small><a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">Code for Africa</a> is an initiative of <a href="https://icfj.org" target="_blank" rel="noopener noreferrer">ICFJ</a>.</small></p>
+    <p><small><a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">City Press</a> is a newspaper of <a href="https://www.media24.com" target="_blank" rel="noopener noreferrer">Media24</a>.</small></p>
 </div>
