--- a/our_land/templates/_footer.html
+++ b/our_land/templates/_footer.html
@@ -3,22 +3,22 @@
 <div class="column-two-thirds">
     <p class="smaller"><strong>{{ HURUMAP.name }}</strong> {{ HURUMAP.description }}
     </p>
-    <p class="smaller">
+    <p class="smaller" style="margin-bottom: 0;">
       This project is build on software originally created by
       the Knight Lab in the U.S.A. for their CensusReporter.org project,
        which has been repurposed by  <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and Media Monitoring Africa for
         <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a> in South Africa and by Code for Africa for HURUmap in Kenya, Tanzania, Uganda and Zambia.
-    <br/>
+    </p>
 </div>
 <div class="column-third text-center">
     <p>A project by:</p>
     {% block footer_branding %}
     <a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/logos/citypress-white.png' %}" alt="City Press" style="margin-top: 0;"></a>
+        <img src="{% static 'img/logos/citypress.png' %}" alt="City Press" style="margin-top: 0;"></a>
     <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
+        <img src="{% static 'img/logos/cfafrica.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
     {% endblock %}
-    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid rgba(255, 255, 255, 0.5);"/>
+    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid #94C11F;"/>
     <p style="margin-bottom:0;"><small><a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">Code for Africa</a> is an initiative of <a href="https://icfj.org" target="_blank" rel="noopener noreferrer">ICFJ</a>.</small></p>
     <p><small><a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">City Press</a> is a newspaper of <a href="https://www.media24.com" target="_blank" rel="noopener noreferrer">Media24</a>.</small></p>
 </div>
