--- a/our_land/templates/blocks/showcase.html
+++ b/our_land/templates/blocks/showcase.html
@@ -1,15 +1,17 @@
 <a name="showcase"></a>
-<div class="showcase {{ extra_css_class }}">
-    <div class="container-narrow clearfix text-center">
-        <h1>Story Showcase</h1>
+<div class="showcase stories {{ extra_css_class }}">
+    <div class="container-narrow clearfix">
+        <h1 class="text-center">Story Showcase</h1>
         <p></p>
         <br/>
         {% for story in HURUMAP.showcase_stories %}
             <div class="column-third">
               <a href="{{ story.link }}" target="_blank" rel="noopener" style="text-decoration: none; color: #222">
-                <div class="img" style="background-image: url('{{ story.img }}');"></div>
-                <h3>{{ story.title }}</h3>
-                <p>By {{ story.author }}</p>
+                <div class="img" style="background-image: url('{{ story.img }}');" style="display: flex;">
+                    <h3 style="margin-top: auto;"><span>{{ story.title }}</span></h3>
+                </div>
+                
+                <p class="text-muted">By {{ story.author }}</p>
                 <p>{{ story.brief }}</p>
                 <br/>
               </a>
