--- a/hurumap_land/templates/_footer.html
+++ b/hurumap_land/templates/_footer.html
@@ -4,21 +4,20 @@
     <p class="smaller"><strong>{{ HURUMAP.name }}</strong> {{ HURUMAP.description }}
     </p>
     <p class="smaller" style="margin-bottom: 0;">
-      This project is build on software originally created by
+      This project is built on software originally created by
       the Knight Lab in the U.S.A. for their CensusReporter.org project,
-       which has been repurposed by  <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and Media Monitoring Africa for
-        <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a> in South Africa and by Code for Africa for HURUmap in Kenya, Tanzania, Uganda and Zambia.
+       which has been repurposed by  <a href="https://openup.org.za/" target="_blank" rel="noopener noreferrer">OpenUp</a> and Media Monitoring Africa for
+        <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener noreferrer">Wazimap</a> in South Africa and by Code for Africa for HURUmap in Kenya, Tanzania, Uganda and Zambia.
     </p>
 </div>
 <div class="column-third text-center">
     <p>A project by:</p>
     {% block footer_branding %}
     <a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/logos/citypress.png' %}" alt="City Press" style="margin-top: 0;"></a>
+        <img src="{% static 'img/logos/pulizer-center.svg' %}" alt="Pulitzer Centre" style="margin-top: 0;"></a>
     <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
         <img src="{% static 'img/logos/cfafrica.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
     {% endblock %}
-    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid #94C11F;"/>
+    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid #eee;"/>
     <p style="margin-bottom:0;"><small><a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">Code for Africa</a> is an initiative of <a href="https://icfj.org" target="_blank" rel="noopener noreferrer">ICFJ</a>.</small></p>
-    <p><small><a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">City Press</a> is a newspaper of <a href="https://www.media24.com" target="_blank" rel="noopener noreferrer">Media24</a>.</small></p>
 </div>
