--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -2,14 +2,16 @@
     <div class="wrapper text-center">
         <h1>Partners</h1>
         <p>{{ HURUMAP.name }} is made possible through support from the following partners:</p>
-        <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener">
+        <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/landbou.png" alt="Landbou" style="max-height: 50px;"></a>
-        <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener">
+        <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/rapport.jpg" alt="Rapport" style="max-height: 50px;"></a>
-        <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
+        <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/cfafrica.png" alt="Code for Africa"></a>
-        <a href="https://city-press.news24.com/" target="_blank" rel="noopener">
+        <a href="https://city-press.news24.com/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/citypress.png" alt="City Press"></a>
+        <a href="https://city-press.news24.com/News/land-cleveage-and-conflict-20180621" target="_blank" rel="noopener noreferrer">
+          <img src="{{ STATIC_URL }}img/logos/ourland.png" alt="Our Land / Ons Grond"></a>
     </div>
 </div>
 
