--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -8,7 +8,7 @@
             <div class="column-third">
               <a href="{{ story.link }}" target="_blank" rel="noopener" style="text-decoration: none; color: #222">
                 <div class="img" style="background-image: url('{{ story.img }}');" style="display: flex;">
-                    <h3 style="margin-top: auto;"><span>{{ story.title }}</span></h3>
+                    <h2><span>{{ story.title }}</span></h2>
                 </div>
                 
                 <p class="text-muted">By {{ story.author }}</p>
