--- a/hurumap_land/templates/_footer.html
+++ b/hurumap_land/templates/_footer.html
@@ -11,13 +11,13 @@
     </p>
 </div>
 <div class="column-third text-center">
-    <p>A project by:</p>
+    <p class="font-raleway font-weight-bold">A Project By:</p>
     {% block footer_branding %}
-    <a href="https://city-press.news24.com" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/logos/pulizer-center.svg' %}" alt="Pulitzer Centre" style="margin-top: 0;"></a>
+    <a href="https://pulitzercenter.org" target="_blank" rel="noopener noreferrer">
+        <img src="{% static 'img/logos/pulitzer-center-white.svg' %}" alt="Pulitzer Centre" style="margin-top: 0;"></a>
     <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
-        <img src="{% static 'img/logos/cfafrica.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
+        <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
     {% endblock %}
-    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid #eee;"/>
+    <hr style="margin: 15px auto; width: 40%; border-top: 0.5px solid rgba(238, 238, 238, 0.5);"/>
     <p style="margin-bottom:0;"><small><a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">Code for Africa</a> is an initiative of <a href="https://icfj.org" target="_blank" rel="noopener noreferrer">ICFJ</a>.</small></p>
 </div>
