--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends 'homepage.html' %}{% load sass_tags humanize partition static %}
 
-{% block head_meta_description %}{{ HURUmap.name }} provides useful facts and
+{% block head_meta_description %}{{ HURUMAP.name }} provides useful facts and
 data about land ownership in South Africa. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
@@ -15,40 +15,72 @@ download data, and embed charts on your site.{% endblock %}
 </li>
 {% endblock header_menu %}
 
-{% block header_content %}
-<div class="content-container clearfix bg-color-secondary text-center">
-  <div class="wrapper">
-    <h1>Discover the Data behind our Land</h1>
-    <h4>{{ HURUMAP.name }} provides useful facts and data about land ownership in South Africa.</h4>
-  </div>
-</div>
-{% endblock header_content %}
+{% block header_content %}{% endblock header_content %}
 
-{% block how_it_works %}
-<div class="wrapper clearfix how-it-works">
-  <h1>How It Works</h1>
-  <br/>
-  <div class="column-third">
-    <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/checklist.svg' %}"/></span></p>
-    <h3>Find Facts</h3>
-    <p>Land ownership data is broken down by province and category: agricultural land, erven and urban land and sectional title land. </p>
+{% block content_container %}
+
+  <div class="clearfix">
+      <div id="slippy-map"></div>
+      <div id="map-div" class="map-box">
+        <i class="fa fa-times" style="float:right;margin-top:-18px; margin-right:-20px"
+         onclick="javascript:$('#map-div').css('display', 'none')"></i>
+        <h2 class="font-weight-bold">Discover the stories behind Our lands</h2>
+        <p>{{ HURUMAP.name }} provides useful facts and
+        data about land ownership in South Africa. Compare places using tables and maps,
+        download data, and embed charts on your site.</p>
+
+      </div>
   </div>
-  <div class="column-third">
-    <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/analysis.svg' %}"/></span></p>
-    <h3>Visualize</h3>
-    <p>Our library of charts gives you insight into land data from provinces you research. Look for them on profile pages. You can embed the charts on your own site. </p>
+  <div class="showcase how-it-works bg-tan text-center">
+    {% block how_it_works %}
+    <div class="wrapper clearfix how-it-works">
+      <h1>How It Works</h1>
+      <br/>
+      <div class="column-third">
+        <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/checklist.svg' %}"/></span></p>
+        <h3>Find Facts</h3>
+        <p>Land ownership data is broken down by province and category: agricultural land, erven and urban land and sectional title land. </p>
+      </div>
+      <div class="column-third">
+        <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/analysis.svg' %}"/></span></p>
+        <h3>Visualize</h3>
+        <p>Our library of charts gives you insight into land data from provinces you research. Look for them on profile pages. You can embed the charts on your own site. </p>
+      </div>
+      <div class="column-third">
+        <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
+        <h3>Get Context</h3>
+        <p>Pre-computed land statistics are presented alongside each data point so you can see how each place fits into a large context.</p>
+      </div>
+    </div>
+    <div class="wrapper">
+      <br/><br/>
+      <p><a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a></p>
+    </div>
+    {% endblock %}
   </div>
-  <div class="column-third">
-    <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
-    <h3>Get Context</h3>
-    <p>Pre-computed land statistics are presented alongside each data point so you can see how each place fits into a large context.</p>
-  </div>
-</div>
-<div class="wrapper">
-  <br/><br/>
-  <p><a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a></p>
-</div>
-{% endblock %}
+
+  {% include 'blocks/showcase.html' %}
+
+  {% include 'blocks/partners.html' with extra_css_class='bg-tan' %}
+
+  <style>
+    .map-box {
+      position: absolute;
+      top: 20%;
+      left: 35%;
+      border-radius: 2px;
+      width: 600px;
+      height: 200px;
+      background-color: #ffffff;
+      padding: 40px 60px;
+      box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.23);
+    }
+    .map-close {
+
+    }
+  </style>
+
+{% endblock content_container %}
 
 {% block homepage_javascripb_libs %}
 {{ block.super }}
