--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -26,7 +26,7 @@ download data, and embed charts on your site.{% endblock %}
          onclick="javascript:$('#map-div').css('display', 'none')"></i>
          <div style="padding-bottom: 2%">
             <h2 class="font-weight-bold" style="border-bottom: 2px solid; font-size: 2em">
-              Discover the stories behind <br/> our <span style="color: #269a92;">lands</span></h2>
+              Discover the stories behind <br/> our <span style="color: #269a92;">land</span></h2>
         </div>
         <p>{{ HURUMAP.name }} gives journalist and civic activists
           useful facts and data about land ownership in South Africa</p>
