setting up section

--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -1,22 +1,32 @@
-<div class="showcase partners clearfix partners {{ extra_css_class }}">
-    <div class="wrapper text-center">
-        <h1>Partners</h1>
+<div class="container-fluid clearfix partners {{ extra_css_class }}">
+    <div class="container wrapper text-center section-container">
+        <h1 class="section-title">Partners</h1>
         <p>{{ HURUMAP.name }} is made possible through support from the following partners:</p>
+        <div>
         <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/landbou.png" alt="Landbou" style="max-height: 50px;"></a>
+        </div>
+        <div>
         <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/rapport.jpg" alt="Rapport" style="max-height: 50px;"></a>
+        </div>
+        <div>
         <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/cfafrica.png" alt="Code for Africa"></a>
+        </div>
+        <div>
         <a href="https://city-press.news24.com/" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/citypress.png" alt="City Press"></a>
+        </div>
+        <div>
         <a href="https://city-press.news24.com/News/land-cleveage-and-conflict-20180621" target="_blank" rel="noopener noreferrer">
           <img src="{{ STATIC_URL }}img/logos/ourland.png" alt="Our Land / Ons Grond"></a>
+        </div>
     </div>
 </div>
 
 <style>
   .showcase.partners img {
-    margin: 10px 20px; 
+    margin: 10px 20px;
   }
 </style>
