--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -48,6 +48,15 @@ download data, and embed charts on your site.{% endblock %}
   <br/><br/>
   <p><a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a></p>
 </div>
+
+<style>
+  .section-title {
+    color: #0e4a48
+  }
+  .section-container {
+    background-color: #fff;
+  }
+</style>
 {% endblock %}
 
 {% block homepage_javascripb_libs %}
